--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.25.4",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.8",
     "@formspree/react": "^2.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -11,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "chokidar": "^3.6.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
@@ -22,6 +29,7 @@
     "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
+    "uuid": "^10.0.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
