--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://am98-20.github.io/am98-20",
   "dependencies": {
     "@babel/plugin-transform-async-generator-functions": "^7.25.4",
     "@babel/plugin-transform-class-properties": "^7.25.4",
@@ -28,7 +29,7 @@
     "react-toastify": "^8.1.0",
     "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.2",
+    "typescript": "^4.9.5",
     "uuid": "^10.0.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
@@ -36,6 +37,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,6 +65,7 @@
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-hash-link": "^2.4.4",
     "@types/styled-components": "^5.1.18",
-    "@types/validator": "^13.7.1"
+    "@types/validator": "^13.7.1",
+    "gh-pages": "^6.1.1"
   }
 }
